<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/irrigationStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- Irrigation Status -->
        <LinearLayout
            android:id="@+id/irrigNextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/irrigIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_clear_grey_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/next_irrigation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/irrigNextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/next_irrigation_example" />

        </LinearLayout>

        <!-- Last irrigation Layout -->
        <LinearLayout
            android:id="@+id/irrigLastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_double"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_clear_grey_24dp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/last_irrigation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/irrigLastTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:text="@string/example_last_irrigation" />

        </LinearLayout>

        <!-- Last Rainfall Layout -->
        <LinearLayout
            android:id="@+id/irrigLastRainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_double"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_clear_grey_24dp"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/last_rainfall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/irrigRainfallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:text="@string/example_last_rain" />

        </LinearLayout>

    </LinearLayout>

</merge>